Fix cropping window.  Hide print styles.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -117,7 +117,7 @@ div.jcrop-holder img, img#preview
   .span2 {
     width: 90pt;
   }
-  .navbar {
+  .navbar, .directory-link, btn-group {
     display: none;
   }
 }
